assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');


* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background:url(../images/fresh-lemon-orchard-seamless-pattern-dark-photography.jpg);
    font-family: "Lato", sans-serif;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    transition: all .5s ease-in-out;
    overflow-x: hidden;
    position: relative;
    margin: 0;
    padding-bottom: 100px;
    box-sizing: border-box;
}

/*---------------------------------------------------------- Nav */

.navbar {
    width: 100%;
    background-color: #fcfcfcf3;
    height: 100px;
    justify-content: space-between;
    bottom: 10px;
}

.navbar-brand {
    font-size: 30px;
    font-weight: 400;
    letter-spacing: 2px;
}

.nav-items {
    width: fit-content;
}

#menu {
    font-size: 21px;
    letter-spacing: 2px;
}

#menu li a {
    margin: 5px;
}




/*---------------------------------------------- Special Paddings / Margins / Text */

.uppercase {
    text-transform: uppercase;
}

/*---------------------------------------------------------- main */

.hero-section {
    height: 50vh;
    position: relative;
    box-sizing: border-box;
}

.res-btn {
    background-color: rgba(12, 72, 35, 0.711);
    padding: 5px;
    border-radius: 15%;
}

.res-btn:hover,
.res-btn:active,
.res-btn:focus,
.btn:active:focus {
    color: white;
    border: 2px solid black;
}

.col-header {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: rgb(0, 0, 0);
    z-index: 1;
    text-align: center;
    padding: 1rem 5rem;
    border-radius: 10px;
    margin-top: 50px;
    background-color: rgba(255, 255, 255, 0.926)
}

h1 {
    font-size: 45px;
}


/*---------------------------------------------------------- Footer */

footer div {
    color: rgb(0, 0, 0);
    background-color: rgba(255, 255, 255, 0.915);
}

footer h2 {
    font-size: 1em;
    margin-bottom: 0.5em;
    margin-right: 1em;
}

footer h3 {
    font-size: 1em;
    font-weight: bold;
    margin-top: 0.8em;
    margin-bottom: 0.1em;
}

footer h3,
footer p {
    margin-left: 0.5em;
}

footer p {
    font-size: 0.9em;
}

.footer-icon {
    background-color: rgba(12, 72, 35, 0.711);
    width: 3.5em;
    height: 3.5em;
}

.footer-icon a i {
    color: rgb(0, 0, 0);
    font-size: 30px;
}

.footer-icon:hover {
    border: 2px solid black;
}


/*---------------------------------------------------------- MENU */

#menu1 .row .col-12 {
    font-size: 14px; 
    bottom: 0;
}

.col-menu {
    text-align: center;
    padding: 1rem 5rem;
    border-radius: 10px;
    margin-top: 200px;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.926);
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    color: rgb(0, 0, 0);
    z-index: 1;
    width: 70%;
}

.menu-section {
    height: 200vh;
    position: relative;
    box-sizing: border-box;
    top: 600px;
    bottom: 0;
}

.starters {
    padding-top: 40px;
}

